# django-demo

./: .gitignore  Dockerfile  db.sqlite3  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
apps/api/: admin.py  serializers.py  urls.py
apps/api/migrations/: 0001_initial.py
apps/api/models/: user_models.py
apps/api/views/: user_views.py
apps/users/: admin.py  models.py  serializers.py
config/: base.py  development.py  production.py  settings.py  urls.py
config/settings/: base.py  development.py  production.py
