[tool.poetry]
name = "django-demo"
version = "0.1.0"
description = ""
authors = ["yuta519 <yuta519.ka23tf@docomo.ne.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.6"
djangorestframework = "^3.13.1"
mysqlclient = "^2.1.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
